--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   "require": {
     "php" : "^7.2",
     "illuminate/support": "5.8.*",
-    "spatie/laravel-blade-x": "^2.2"
+    "spatie/laravel-blade-x": "^2.2",
+    "appstract/laravel-blade-directives": "^1.4"
   },
   "autoload": {
     "psr-4": {
